@@ -5,7 +5,7 @@ import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.List;
+import java.util.Collections;
 
 @Configuration
 public class SwaggerConfig {
@@ -13,8 +13,8 @@ public class SwaggerConfig {
     @Bean
     public OpenAPI customOpenAPI() {
         return new OpenAPI()
-                .servers(List.of(
-                        new Server().url("https://9245.408procr.amypo.ai")
+                .servers(Collections.singletonList(
+                        new Server().url("https://9245.408procr.amypo.ai/")
                 ));
     }
 }
